# libosbuild

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
libosbuild/: Cargo.toml  README.md
libosbuild-ffi/: Cargo.toml
libosbuild-ffi/src/: lib.rs
libosbuild-py/: Cargo.toml
libosbuild-py/src/: lib.rs
libosbuild/src/: communication.rs  core.rs  dependency.rs  lib.rs  manifest.rs  module.rs  preprocessor.rs
libosbuild/src/communication/: mod.rs
libosbuild/src/communication/channel/: mod.rs
libosbuild/src/core/: mod.rs  test.rs
libosbuild/src/dependency/: mod.rs
libosbuild/src/manifest/: description.rs  meta.rs  mod.rs  path.rs  validate.rs
libosbuild/src/manifest/description/: mod.rs  v1.rs  v2.rs
libosbuild/src/manifest/description/validation/: mod.rs  test.rs
libosbuild/src/manifest/path/: mod.rs  test.rs
libosbuild/src/module/: mod.rs  test.rs
libosbuild/src/preprocessor/: mod.rs
libosbuild/src/sandbox/communication/channel/: mod.rs  protocol.rs  transport.rs
osbuild/: Cargo.toml
osbuild-api/: Cargo.toml
osbuild-api/src/: main.rs
osbuild-cli/: Cargo.toml
osbuild-cli/src/: main.rs
osbuild-mod/: Cargo.toml
osbuild-mpp/: Cargo.toml
osbuild/src/: main.rs
src/: lib.rs
