[package]
name = "libosbuild"
version = "0.1.0"
edition = "2021"
authors = ["supakeen <supakeen@redhat.com>"]
description = "`libosbuild` library modules."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rand = { version = "0.8" }
